# GPT-SoVITS-Infer

./: .gitignore  README.md  dockerfile  example.ipynb  pyproject.toml
.github/workflows/: build-docker.yml
scripts/: runpod_api.py
src/gpt_sovits/: infer.py
src/gpt_sovits/infer/: api.py  inference.py  text_utils.py  worker.py
