[project]
name = "GPT-SoVITS"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "",email = ""},
]
dependencies = [
    "numpy",
    "scipy",
    "tensorboard",
    "librosa==0.9.2",
    "numba==0.56.4",
    "pytorch-lightning",
    "gradio==3.38.0",
    "gradio-client==0.8.1",
    "ffmpeg-python",
    "onnxruntime",
    "tqdm",
    "funasr==1.0.0",
    "cn2an",
    "pypinyin",
    "pyopenjtalk",
    "g2p-en",
    "torchaudio",
    "modelscope==1.10.0",
    "sentencepiece",
    "transformers",
    "chardet",
    "PyYAML",
    "psutil",
    "jieba-fast",
    "jieba",
    "LangSegment>=0.2.0",
    "Faster-Whisper",
    "wordsegment",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
